# hep-wizard

./: README.md  pyproject.toml  setup.cfg
hepwiz/: mass_hist.py
