[metadata]
name = hep-wizard
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Executable scripts for high energy physics phenomenology.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/hep-wizard
license = BSD 3-Clause License
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = hepwiz
python_requires = >=3
install_requires =
    click

[options.entry_points]
console_scripts = 
    mass-hist = hepwiz.mass_hist:main

[options.extras_require]
dev =
    pre-commit
    flake8 ==3.9.2
    mypy ==0.910

[options.package_data]
hepwiz = py.typed

[flake8]
max-line-length = 79
